--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,7 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "angular-bootstrap": "^1.3.1",
-    "font-awesome": "fontawesome#^4.5.0"
+    "font-awesome": "^4.6.2"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
